[package]
name = "arduino-backlight-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb = "0.8.36"
serialport = "4.2.1"
windows = { version = "0.48.0", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }
